--- a/mantra-frontend/src/app/components/deck-item/deck-item.component.css
+++ b/mantra-frontend/src/app/components/deck-item/deck-item.component.css
@@ -6,6 +6,8 @@
     transition: transform 0.3s, box-shadow 0.3s;
     margin: 16px;
     cursor: pointer;
+    position: relative;
+    z-index: 1;
 }
 
 .deck-card:hover {
